# rust-compare

./: .gitignore  Cargo.toml  README.md
benches/: ac.rs  ac_dfa.rs  aho_corasick.rs  naive.rs
src/: ac.rs  ac_dfa.rs  aho_corasick.rs  lib.rs  naive.rs
tests/: ac.rs  ac_dfa.rs  aho_corasick.rs  naive.rs
