[package]
name = "rust-compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "naive"
harness = false

[[bench]]
name = "aho_corasick"
harness = false