[package]
name = "rust-compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"

[dev-dependencies]
criterion = "0.5.1"
dhat = "0.3.2"

[[bench]]
name = "naive"
harness = false

[[bench]]
name = "ac"
harness = false

[[bench]]
name = "ac_dfa"
harness = false
